my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EUNOP/EUNOP.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EUNOP.dml:9:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EUNOP.dml:11:6: error EBTYPE: wrong type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EUNOP.dml:11:6:   got:      double
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EUNOP.dml:11:6:   expected: integer type
